# wenheng-workspace

./: .dockerignore  .gitattributes  .gitignore  AGENT_API.md  ARCHITECTURE.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  app.env.example  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: build-exe.yml  ci.yml
clients/python/: README.md  pyproject.toml
clients/python/src/wenheng_client/: __init__.py  cli.py  client.py
clients/python/tests/: test_cli.py  test_client.py
package/: Dockerfile  main.py  requirements.txt
package/backend/: requirements.txt
package/backend/app/: agent_api.py  agent_schemas.py  config.py  database.py  dependencies.py  main.py  schemas.py  security.py
package/backend/app/models/: models.py
package/backend/app/routes/: admin.py  agent.py  optimization.py  prompts.py
package/backend/app/services/: ai_service.py  concurrency.py  config_service.py  document_roundtrip.py  export_service.py  optimization_service.py
package/backend/app/utils/: auth.py
package/backend/app/word_formatter/: routes.py
package/backend/tests/: test_agent_api.py  test_batch_optimization.py  test_concurrency.py  test_config_service.py  test_document_roundtrip.py  test_existing_docx_formatter.py  test_ooxml_security.py  test_security.py
package/docker/: entrypoint.sh
package/frontend/: index.html  package-lock.json  package.json  vite.config.js
package/frontend/src/: App.jsx  branding.js  index.css  main.jsx
package/frontend/src/api/: eventStream.js  index.js
package/frontend/src/components/: ApiConfigGuide.jsx  (+3 more)
(+12 files in other folders)
