[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "wenheng-agent-client"
version = "1.0.0"
description = "Python SDK and CLI for the Wenheng Agent API"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "CC-BY-NC-SA-4.0"}
authors = [{name = "simplez2"}]
dependencies = ["httpx>=0.27,<1"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]

[project.scripts]
wenheng = "wenheng_client.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/wenheng_client"]
